--- a/my-app/src/components/ProductSection.css
+++ b/my-app/src/components/ProductSection.css
@@ -179,16 +179,16 @@
 @media (max-width: 700px) {
   .product-section {
     flex-direction: column;
-    margin: 0px 0px 24px;
-    border-radius: 10px;
+    margin: 0;
+    border-radius: 0;
     padding: 0px 0px 30px;
   }
 
   .product-left {
-    width: calc(100% - 32px);
-    margin: 0 auto;
+    width: 100%;
+    margin: 0;
     height: 320px;
-    border-radius: 16px;
+    border-radius: 0;
     overflow: hidden;
     position: relative;
     z-index: 1;
